clusters/common/apps/kubeshark/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeshark
  namespace: kubeshark
  annotations:
    item.homer.rajsingh.info/name: "Kubeshark"
    item.homer.rajsingh.info/subtitle: "API Traffic Analyzer"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/kubeshark.svg"
    item.homer.rajsingh.info/keywords: "network, traffic, kubernetes, wireshark"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "kubeshark.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kubeshark-front
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
